# pipeit

./: Cargo.toml
examples/: poc.rs
pipeit/src/: lib.rs
src/: lib.rs
