[package]
name = "pipeit"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/RustLangES/pipeit"
homepage = "https://github.com/RustLangES/pipeit"
description = "Pipe functional style programming"
categories = ["development-tools"]
keywords = ["code", "functional"]

[dependencies]
